--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.28.0",
+    "events": "^1.1.1",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
+    "flux": "^3.1.2",
     "node-sass": "^4.5.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "react": "^15.4.2",
