--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack --progress --config webpack.production.config.js"
+    "webpack": "webpack-dev-server",
+    "build": "webpack --progress --config webpack.production.config.js",
+    "start": "set NODE_ENV=development && nodemon ./src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,11 +26,13 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
+    "react-router-dom": "^4.1.2",
     "sass-loader": "^6.0.5",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.16.1",
     "timestamp-webpack-plugin": "^0.2.3",
-    "webpack": "^2.5.1"
+    "webpack": "^2.5.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
